# codecrafters-interpreter-rust-v2

./: Cargo.toml  README.md  test.lox  your_program.sh
.codecrafters/: run.sh
examples/: quick-dev.rs
src/: error.rs  lib.rs  main.rs  parser.rs  printer.rs  scanner.rs  string_ext.rs  token.rs  visitor.rs
src/environment/: error.rs  mod.rs
src/interpreter/: builtins.rs  error.rs  mod.rs
src/interpreter/environment/: error.rs  mod.rs
src/parser/: error.rs  mod.rs
src/resolver/: error.rs  mod.rs
src/tree/: expr.rs  stmt.rs
src/value/: callable.rs  error.rs  mod.rs
