[package]
name = "interpreter"
version = "0.3.0"
edition = "2021"
description = ""
authors = ["Grapple228"]
rust-version = "1.80"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#Other
derive_more = {version = "1", features = ["from"] }
lazy_static = "1.5.0"

[dev-dependencies]
anyhow = "1"
